src/objects/Account_Schedule__c.object
<CustomObject>
    <description>Global: Used to record term time or holiday tome at the account</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account to which this schedule pertains</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Schedules</relationshipLabel>
        <relationshipName>Account_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Any additional details about the Account Schedule record. For example, when the Type is &quot;Break&quot;, a description may be &quot;Independence Day&quot;.</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The last date for which this Account Schedule record is applicable</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The first date for which this Account Schedule record is applicable</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of schedule record (e.g. Semester, Quarter, Break, etc.)</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Account_Schedules</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>DM_Identifier__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Mine</filterScope>
        <label>My Account Schedules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>Account Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>